fixing pom so local Integration Tests work and we don't run out of PermGen space