@@ -570,6 +570,7 @@
 						<configuration>
 							<forkCount>1</forkCount>
 							<reuseForks>true</reuseForks>
+							<argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
 							<systemPropertyVariables>
 								<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
 								<jboss.home>${jboss.home}</jboss.home>
@@ -586,6 +587,7 @@
 						<configuration>
 							<forkCount>1</forkCount>
 							<reuseForks>false</reuseForks>
+							<argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
 							<systemPropertyVariables>
 								<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
 								<jboss.home>${jboss.home}</jboss.home>
